--- a/1-projekt-sass/scss/theme/_one-page.scss
+++ b/1-projekt-sass/scss/theme/_one-page.scss
@@ -20,10 +20,10 @@
 
             .icon-about {
                 color: $color-text-primary;
-                width: $base-font-size * 4.5;
-                height: $base-font-size * 4.5;
+                width: 96px;
+                height: 96px;
                 border-radius: 100%;
-                line-height: $base-font-size * 4.5;
+                line-height: 96px;
                 background-color: $color-primary;
                 margin: $margin-none auto $baseline;
             }
@@ -139,7 +139,7 @@
                 background: $color-portfolio-hover;
                 -webkit-transition: all .35s;
                 -moz-transition: all .35s;
-                transition: all .35s;
+                transition: all 1s;
 
                 .portfolio-box-caption-content {
                     position: absolute;
@@ -177,6 +177,11 @@
             border-radius: 100%;
             line-height: $base-font-size * 4.5;
             border: 2px solid $color-primary;
+            transition: all 0.5s;
+
+            &:hover {
+                transform: rotate(-45deg);
+            }
         }
 
 
