--- a/1-projekt-sass/scss/frameworks/_bootstrap.scss
+++ b/1-projekt-sass/scss/frameworks/_bootstrap.scss
@@ -62,7 +62,7 @@ dfn {
 }
 h1 {
   margin: .67em 0;
-  font-size: 1em;
+  font-size: 2em;
 }
 mark {
   color: #000;
@@ -265,16 +265,11 @@ th {
   }
 }
 @font-face {
-  font-family: 'Glyphicons Halflings'; 
+  font-family: 'Glyphicons Halflings';
 
   src: url('../fonts/glyphicons-halflings-regular.eot');
   src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
-
-  
 }
-
-
-
 .glyphicon {
   position: relative;
   top: 1px;
@@ -6246,6 +6241,7 @@ button.close {
 }
 .carousel-caption .btn {
   text-shadow: none;
+  font-size: 22px;
 }
 @media screen and (min-width: 768px) {
   .carousel-control .glyphicon-chevron-left,
