--- a/1-projekt-sass/scss/layout/_header.scss
+++ b/1-projekt-sass/scss/layout/_header.scss
@@ -92,7 +92,7 @@ header.header-image {
 @media(min-width:768px) {
 
     .header-contact {
-    	background-color: $color-background;
+    	background-color: $color-top;
     	height: $base-font-size * 2;
     	line-height: $base-font-size * 2;
         font-size: $base-font-size;
