--- a/1-projekt-sass/scss/layout/_slider.scss
+++ b/1-projekt-sass/scss/layout/_slider.scss
@@ -11,7 +11,7 @@
 			background-color: $color-primary;
 			width: $base-font-size * 2.5;
 			height: $base-font-size * 2.5;
-			font-size: $base-font-size * 1;
+			font-size: $base-font-size * 2;
 			font-family: $font-primary;
 			line-height: $base-font-size * 2.2;
 			margin: $margin-none;
@@ -52,11 +52,10 @@
 		}
 
 		h1 {
-			font-size: 38px;
+			font-size: $base-font-size + 22;
+			letter-spacing: 4px;
 			margin-top: $baseline;
 			margin-bottom: $baseline;
-			text-transform: uppercase;
-			letter-spacing: 4px;
 		}
 
 		p {
@@ -65,10 +64,9 @@
 		}
 
 		.btn-primary {
-			margin-top: 56px;
-			font-size: 22px;
+			margin-top: $baseline;
+			font-size: $base-font-size + 6;
 			padding: 10px 12px;
-			
 		}
 	}
 
@@ -87,11 +85,12 @@
 
 			p, h1 {	
 				color: $color-text-primary;
-				text-transform: capitalize;
+				text-transform: uppercase;
 			}
 
 			h1 {
-				font-size:38px;
+				font-size: $base-font-size + 15;
+				letter-spacing: 4px;
 				margin-top: $baseline;
 				margin-bottom: $baseline;
 			}
@@ -102,8 +101,8 @@
 			}
 
 			.btn-primary {
-				margin-top: $baseline * 2;
-				font-size: $base-font-size - 2;
+				margin-top: $baseline;
+				font-size: $base-font-size + 6;
 				padding: 10px 12px;
 			}
 		}
@@ -124,11 +123,12 @@
 
 			p, h1 {	
 				color: $color-text-primary;
-				text-transform: capitalize;
+				text-transform: uppercase;
 			}
 
 			h1 {
-				font-size: 38px;
+				font-size: $base-font-size + 10;
+				letter-spacing: 4px;
 				margin-top: $baseline;
 				margin-bottom: $baseline;
 			}
@@ -161,14 +161,14 @@
 
 			p, h1 {	
 				color: $color-text-primary;
-				text-transform: capitalize;
+				text-transform: uppercase;
 			}
 
 			h1 {
-				font-size: $base-font-size + 22;
+				font-size: $base-font-size + 5;
+				letter-spacing: 4px;
 				margin-top: $baseline * 0.75;
 				margin-bottom: $baseline * 0.75;
-				letter-spacing: 4px;
 			}
 
 			p {
@@ -177,7 +177,7 @@
 			}
 
 			.btn-primary {
-				margin-top: $baseline * 0.5 +24px;
+				margin-top: $baseline * 0.5;
 				font-size: $base-font-size - 2;
 				padding: 5px 6px;
 			}
@@ -199,11 +199,12 @@
 
 			p, h1 {	
 				color: $color-text-primary;
-				text-transform: capitalize;
+				text-transform: uppercase;
 			}
 
 			h1 {
 				font-size: $base-font-size + 2;
+				letter-spacing: 4px;
 				margin-top: $margin-none;
 				margin-bottom: $margin-none;
 			}
@@ -241,11 +242,12 @@
 
 			p, h1 {	
 				color: $color-text-primary;
-				text-transform: capitalize;
+				text-transform: uppercase;
 			}
 
 			h1 {
-				font-size: 38px;
+				font-size: $base-font-size * 0.75;
+				letter-spacing: 4px;
 				margin-top: $margin-none;
 				margin-bottom: $margin-none;
 			}
