--- a/1-projekt-sass/scss/modules/_dividers.scss
+++ b/1-projekt-sass/scss/modules/_dividers.scss
@@ -9,14 +9,13 @@ hr {
 }
 
 hr.divider-light-dark {
-    max-width: $baseline * 9.375;
+    max-width: 150px;
     border-color: $color-primary;
     border-width: 3px;
-    opacity: 25%;
 }
 
 hr.divider-light {
     border-color: $color-bg-main;
-    max-width: $baseline * 3.3;
+    max-width: 150px;
     border-width: 3px;
 }
