--- a/1-projekt-sass/scss/utilities/_settings.scss
+++ b/1-projekt-sass/scss/utilities/_settings.scss
@@ -11,10 +11,10 @@
 //    Typography 
 // -------------------
 	$base-font-size: 16px;
-	$font-primary: "Raleway";
-	$font-secondary: "Archivo Black";
+	$font-primary: 'Raleway', sans-serif;
+	$font-secondary: 'Archivo Black', sans-serif;
 	$text-transform-base: uppercase;
-	$baseline: $base-font-size * 1;
+	$baseline: $base-font-size * 1.5;
 
 
 
@@ -24,7 +24,7 @@
 // -------------------
 	// Main colors
 	$color-primary: #a5e200;
-	$color-primary-rgb: rgb(165,226,0);
+	$color-primary-rgb: rgb(46,182,209);
 	$color-primary-darker: #238a9e;
 	$color-primary-darker-rgb: rgb(35,138,158);
 
@@ -39,14 +39,16 @@
 	$color-text: #5b5b5b;
 	$color-text-light: #979797;
 
-	$color-link:  #a5e200;
-	$color-link-hover: #88ba00;
+	$color-link: rgb(165,226,0);
+	$color-link-hover: rgb(136,186,0);
+
+
 
 	// Main element colors
 	$color-bg-main: #ffffff;
 	$color-border: #dddddd;
-	$color-background: #f0f4dc;
-
+	$color-background: #f7f7f7;
+	$color-top: #f0f4dc;
 
 
 
